--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
+    "mongoose": "^8.1.3",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
