--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18",
     "react-icons": "^5.0.1",
     "react-lazy-load-image-component": "^1.6.0",
+    "sass": "^1.71.0",
     "sweetalert2": "^11.10.5",
     "use-breakpoint": "^4.0.1"
   },
