--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "aos": "^2.3.4",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
+    "framer-motion": "^11.0.6",
     "mongoose": "^8.1.3",
     "next": "14.1.0",
     "react": "^18",
