login signup apis complete

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 MONGO_URL =mongodb+srv://waqas:waqas123@smit.rzthjbi.mongodb.net/portfolio?retryWrites=true&w=majority
+PASS_KEY = waqas
+JWT_SEC=waqas
+
+ACCESS_TOKEN_SECRET=waqasAccess
+REFRESH_TOKEN_SECRET=waqasRefresh
