--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   "dependencies": {
     "aos": "^2.3.4",
     "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.2",
     "framer-motion": "^11.0.6",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
     "next": "14.1.0",
     "react": "^18",
