--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.2",
     "framer-motion": "^11.0.6",
+    "js-cookie": "^3.0.5",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.3",
     "next": "14.1.0",
